err/slc.clicksearch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slc'...
Listing './lib/python3.5/site-packages/slc/clicksearch'...
Listing './lib/python3.5/site-packages/slc/clicksearch/Extensions'...
Listing './lib/python3.5/site-packages/slc/clicksearch/browser'...
Listing './lib/python3.5/site-packages/slc/clicksearch/browser/images'...
Listing './lib/python3.5/site-packages/slc/clicksearch/browser/templates'...
Listing './lib/python3.5/site-packages/slc/clicksearch/browser/widgets'...
Listing './lib/python3.5/site-packages/slc/clicksearch/portlets'...
Listing './lib/python3.5/site-packages/slc/clicksearch/profiles'...
Listing './lib/python3.5/site-packages/slc/clicksearch/profiles/default'...
Compiling './lib/python3.5/site-packages/slc/clicksearch/setuphandlers.py'...
***   File "./lib/python3.5/site-packages/slc/clicksearch/setuphandlers.py", line 60
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/slc.clicksearch-1.4.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
